implementation endPoint to generate reports
